gnome 3.32 -> 3.34: wayland: system keyboard shortcut (Ctrl+Q) is not overriden
I have a custom shortcut for a "guake-toggle". It's flawless worked. Now, on 3.34, the action is "doubled", e.g. if focus on Firefox and I press Ctrl+Q - Firefox is closed and guake is toggled.
Previous behavior is "action on custom shortcut then stop", e.g. when I press Ctrl+Q - guake is toggle and system "Close Application" is eaten - as expected.
This happens only on Wayland, on Xorg works as before.
P.S.: may be this wrong project, I don't know. Also somebody please, point me where is "Ctrl+Q" is hardcoded - I'll build for myself override or disable this shortcut.